ECE-402: magazine alignment fix

--- a/src/components/magazine-card/magazine-card.module.css
+++ b/src/components/magazine-card/magazine-card.module.css
@@ -1,26 +1,22 @@
 .cardContainer {
-  flex: 1;
-  display: inline-block;
-  scroll-snap-align: start;
-  max-width: 318px;
+  display: block;
 }
 
 .imgContainer {
   position: relative;
   width: 100%;
   height: 250px;
+  margin-top: 1.5em;
   margin-bottom: 1.5em;
-  /* box-shadow: 0 4px 24px rgba(0, 0, 0, 0.4); */
-  background-size:cover;
   border-radius: 3px;
   transition: all .5s ease-in-out;
   -webkit-transition: all .5s ease-in-out;
 }
 
 .imgCss {
+  display: block;
   width: 100%;
   height: 100%;
-  max-height: 408px;
 }
 
 .effect {
